--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,7 +10,7 @@
 
   .line {
     border-top: 2px dashed @silver;
-    width: 98.5vw;
+    width: 100%;
     position: absolute;
     left: 0;
   }
